--- a/FinalProject/res/layout/activity_addresses.xml
+++ b/FinalProject/res/layout/activity_addresses.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="@color/myblue"
             android:drawableTop="@drawable/ic_action_split"
             android:orderInCategory="0"
             android:src="@drawable/ic_action_split"
