--- a/FinalProject/res/layout/activity_main.xml
+++ b/FinalProject/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
+                android:background="@color/myblue"
                 android:drawableTop="@drawable/ic_action_map"
                 android:orderInCategory="0"
                 android:src="@drawable/ic_action_map"
